Fix - spacing between paragraph, heading and content

--- a/assets/css/demo-importer.scss
+++ b/assets/css/demo-importer.scss
@@ -81,7 +81,7 @@
 
 			.plugin-list {
 				border: 1px solid #ddd;
-				border-radius: 3px;
+				margin-top: 20px;
 
 				li {
 					padding: 10px;
